{
    "name": "ShipInput",
    "maps": [
        {
            "name": "Ship",
            "id": "afacd474-d849-44b6-8c7f-bff0b23bebf5",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "b2dcedb1-be3b-4fa3-83b6-87ea072c5af3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "e5d4245d-499a-43b3-a841-98fc26fe8a85",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FirstGunShoot",
                    "type": "Button",
                    "id": "b9961e26-89ac-41fd-8fd3-aa905db9ec00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondGunShoot",
                    "type": "Button",
                    "id": "8c618f87-f510-4d8c-a560-07c1ee49f1dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Direction",
                    "id": "68c171b2-43a3-41d1-8a17-5d819749f8fc",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0321fa35-3017-4036-84f5-bfe35597ec6b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ec5c8093-0399-4175-846d-86b55275cb0d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1663bf7c-145a-44e1-a955-8a9e1c3aefac",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstGunShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea9cb0e5-3ec2-434c-9b13-9e865a070e89",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondGunShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Direction",
                    "id": "3b69dad5-43bd-499d-aec2-0c19a605e413",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c6e8cb21-5745-4ff6-b1a5-62f2da28ceba",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "94382682-d94e-4ed2-b79b-68b08a0c628b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Windows",
            "bindingGroup": "Windows",
            "devices": []
        }
    ]
}